--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       rel="stylesheet"
     />
 
-    <title>Portfolio website complete</title>
+    <title>Amr Amin</title>
   </head>
   <body>
     <!--===== HEADER =====-->
@@ -58,18 +58,18 @@
           </h1>
 
           <a href="#" class="button">Contact</a>
-        </div>
 
-        <div class="home__social">
-          <a href="" class="home__social-icon"
-            ><i class="bx bxl-linkedin"></i
-          ></a>
-          <a href="" class="home__social-icon"
-            ><i class="bx bxl-facebook"></i
-          ></a>
-          <a href="" class="home__social-icon"
-            ><i class="bx bxl-twitter"></i
-          ></a>
+          <div class="home__social">
+            <a href="" class="home__social-icon"
+              ><i class="bx bxl-linkedin"></i
+            ></a>
+            <a href="" class="home__social-icon"
+              ><i class="bx bxl-facebook"></i
+            ></a>
+            <a href="" class="home__social-icon"
+              ><i class="bx bxl-twitter"></i
+            ></a>
+          </div>
         </div>
 
         <div class="home__img">
